<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/myNameTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/myName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_name_hint"
                android:inputType="text"
                android:contentDescription="@string/input_field_for_adding_user_name"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/myOrgTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/myOrg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_org_hint"
                android:inputType="text"
                android:contentDescription="@string/input_field_for_adding_organisation_name"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/myRoleTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/myRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_role_hint"
                android:inputType="text"
                android:contentDescription="@string/input_field_for_adding_role"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/myEmailTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/myEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_email_hint"
                android:inputType="textEmailAddress"
                android:contentDescription="@string/input_field_for_email"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>


        <com.rey.material.widget.Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="@string/save"
            android:contentDescription="@string/save_button"
            android:textColor="@color/white" />


        <LinearLayout
            android:id="@+id/llLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logout_icon" />

            <TextView

                android:id="@+id/tvLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/logout"
                android:contentDescription="@string/logout_button"
                android:textColor="@color/colorAccent"

                />
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
