<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/widgetAppIcon"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            android:src="@drawable/app_icon"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_toRightOf="@+id/widgetAppIcon"
            android:layout_centerVertical="true"
            android:textSize="@dimen/large_text_size"
            android:layout_marginLeft="5dp"
            android:textColor="@color/white"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white">
        <ListView
            android:id="@+id/widget_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/dividerColor"
            android:dividerHeight="1dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            tools:listitem="@layout/meetings_list_item"
            android:visibility="visible"/>
        <LinearLayout
            android:id="@+id/ll_no_meetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:visibility="visible">

            <TextView
                android:id="@+id/no_meetings_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp"
                android:layout_below="@id/toolbar"
                android:text="@string/no_meeting_line1"
                />
            <TextView
                android:id="@+id/no_meetings_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/add_icon"
                android:drawablePadding="5dp"
                android:text="@string/no_meeting_line2"
                />
        </LinearLayout>
        </RelativeLayout>

</LinearLayout>